2011-11-14  Tony Chang  <tony@chromium.org>

        [NRWT] Reftests should run even when pixel tests are disabled.
        https://bugs.webkit.org/show_bug.cgi?id=60605

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/layout_tests/controllers/single_test_runner.py: Only skip ref tests if --no-ref-tests is passed.
            Also add an assert to make sure we get image hashes back when running ref tests.
        * Scripts/webkitpy/layout_tests/controllers/worker.py: Use Driver.has_crashed() instead of poll().
        * Scripts/webkitpy/layout_tests/port/base_unittest.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py: Use DriverProxy.
        * Scripts/webkitpy/layout_tests/port/driver.py: Add DriverProxy which does the work
            of starting a pixel driver if needed.  It handles the logic of sending the test
            to the correct driver.  Also renamed Driver.poll() to Driver.has_crashed().
        * Scripts/webkitpy/layout_tests/port/dryrun.py:
        * Scripts/webkitpy/layout_tests/port/test.py: Switch to using DriverProxy so we get test coverage.
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py: Add --no-ref-tests.
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py: Test --no-ref-tests.

2011-11-15  David Kilzer  <ddkilzer@apple.com>

        Don't use File::Slurp for run-leaks unit tests
        <http://webkit.org/b/72356>

        Reviewed by Daniel Bates.

        * Scripts/webkitperl/run-leaks_unittest/RunLeaks.pm: Added.
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v1.0.pl:
        Extracted common package logic into RunLeaks.pm.  Fixed call to
        RunLeaks::parseLeaksOutput().
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v2.0-new.pl: Ditto.
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v2.0-old.pl: Ditto.

2011-11-15  Peter Kasting  <pkasting@google.com>
